syntax = "proto3";

package ecos;
option go_package = "proto";

import "google/api/annotations.proto";

service SayHello {
    rpc Hello (HelloReq) returns (HelloResp){
        option (google.api.http) = {
        post : "/ecos.SayHello/hello"
        body: "*"
    };
    }
    rpc Hello2 (HelloReq) returns (HelloResp){
        option (google.api.http) = {
        get : "/ecos.SayHello/hello2"
    };
    }
}

message HelloReq {

}

message HelloResp {
    string Resp = 1;
}
